Fix info & pagination button placement on small screens

--- a/assets/grocery_crud/themes/datatables/css/demo_table_jui.css
+++ b/assets/grocery_crud/themes/datatables/css/demo_table_jui.css
@@ -156,6 +156,12 @@ table.display thead th div.DataTables_sort_wrapper span {
   .dataTables_filter {
     width: 100%;
   }
+  .dataTables_info {
+    width: 100% !important;
+  }
+  .dataTables_paginate {
+    width: 100% !important;
+  }
 }
 
 .dataTables_info {
